# panoramic-cli

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: main.yml
contrib/: README.md
contrib/identifier_parser/: configuration.py  dask_configuration.yaml  dask_plugins.py  dask_preload.py  enums.py  exceptions.py  helpers.py  heuristics.py  parser.py  sampler.py  tasks.py
contrib/identifier_parser/dask_routes/: scheduler_routes.py  worker_routes.py
docs/: about.md  generate_tel_docs.py  tel-functions.md
e2e/panoramic/cli/: conftest.py  test_configure.py  test_configure_e2e.py  test_connections_e2e.py  test_field_cleanup_e2e.py  test_field_scaffold_e2e.py  test_init.py  test_init_e2e.py  test_list_companies_e2e.py  test_list_connections.py  test_push_e2e.py  test_scan.py  test_scan_e2e.py
e2e/scenarios/pano-push-pull/: pano.yaml
e2e/scenarios/pano-scan/: pano.yaml
grammar/: Tel.g4
shipping/: Jenkinsfile  generate-versions-file.py  ppfg.sh  string_to_class.rb  update_homebrew.sh  wait_for_pypi.py
shipping/ppfg/: config
shipping/ppfg/template/: depends.rb  install.rb
src/panoramic/cli/: __init__.py  __main__.py  __version__.py  analytics.py  baseclient.py  cli.py  clients.py  command.py  connection.py  connections.py  context.py  controller.py  data_connections.py  dbt.py  diff.py  errors.py  executor.py  scan.py  (+24 more)
(+537 files in other folders)
